<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity"
    android:fillViewport="true">
 <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/p1"
            android:text="@string/course1"
            style="@style/courseStyle"/>
        <TextView
            android:id="@+id/heading1"
            android:text="@string/course2"
            style="@style/courseStyle"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/p1"/>
        <TextView
            android:id="@+id/heading2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:text="@string/course3"
            android:textSize="24sp"
            android:layout_below="@id/heading1"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed"/>
        <TextView
            android:id="@+id/heading3"
            android:text="@string/course4"
            style="@style/courseStyle"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/heading2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apply for Training"
            android:padding="20dp"
            android:layout_alignParentBottom="true"
            android:onClick="newUserMethod"
            android:layout_below="@id/heading3"
            android:layout_centerHorizontal="true"/>

     </RelativeLayout>
    </ScrollView>